# challenge-weef-twitter

./: .gitignore  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
apps/feed/: urls.py  views.py
apps/profiles/: serializers.py  urls.py  views.py
apps/tweets/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/tweets/migrations/: 0001_initial.py  0002_auto_20211013_1729.py
apps/users/: admin.py  models.py  serializer.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_email.py  0002_user_followers.py  0003_auto_20211013_1700.py  0004_auto_20211013_1729.py  0005_user_is_staff.py  0006_auto_20211014_0844.py
twitter/: settings.py  urls.py  wsgi.py
